feat: add public event site management
